SIM-2006 FIX corner case with type arguments